--- a/material-iron-router-web/client/views/addRoutes.html
+++ b/material-iron-router-web/client/views/addRoutes.html
@@ -6,19 +6,41 @@
       <div class="row">
         <div class="input-field col s6">
           <input id="source" type="text" class="validate">
-          <label for="source">Adresse source</label>
+          <label for="source">Address</label>
         </div>
+        </div>
+       <div class="row">
         <div class="input-field col s6">
           <input id="dest" type="text" class="validate">
-          <label for="dest">Adresse destionation</label>
+          <label for="dest">Next hop</label>
         </div>
       </div>
       <div class="row">
         <div class="input-field col s1">
-          <input id="med" type="number" class="validate">
+          <input id="med" type="number" min=0 class="validate">
           <label for="med">MED</label>
         </div>
+        <div class="input-field col s2">
+          <input id="local-pref" type="number" min=0 class="validate">
+          <label for="local-pref">Local Preference</label>
+        </div>
+        <div class="input-field col s1">
+          <input id="origin" type="text" class="validate">
+          <label for="origin">Origin</label>
+        </div>
       </div>
+      <div class="row">
+       <div class="input-field col s6">
+         <input id="as-path" type="text" class="validate">
+         <label for="as-path">AS Path</label>
+       </div>
+     </div>
+     <div class="row">
+      <div class="input-field col s6">
+        <input id="community" type="text" class="validate">
+        <label for="community">Community</label>
+      </div>
+    </div>
 <div class="row">
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <button class="btn waves-effect waves-light" type="submit" name="action">Sauvegarder<i class="material-icons right">send</i></button>
