--- a/material-iron-router-web/client/views/settings.html
+++ b/material-iron-router-web/client/views/settings.html
@@ -1,42 +1,32 @@
 <template name="settings">
   <h1 class="center">Parametrages</h1>
 <div class="row">
-    <form class="col s12">
+    <form id="settings">
       <div class="row">
         <div class="input-field col s6">
-          <input id="first_name" type="text" class="validate">
-          <label for="first_name">First Name</label>
-        </div>
-        <div class="input-field col s6">
-          <input id="last_name" type="text" class="validate">
-          <label for="last_name">Last Name</label>
-        </div>
-      </div>
-      <div class="row">
-        <div class="input-field col s6">
-          <input id="old_password" type="password" class="validate">
+          <input id="old_password" name="old_password" type="password" class="validate">
           <label for="old_password">Old password</label>
         </div>
       </div>
       <div class="row">
         <div class="input-field col s6">
-          <input id="password" type="password" class="validate">
+          <input id="password" name="password" type="password" class="validate">
           <label for="password">New password</label>
         </div>
 	<div class="input-field col s6">
-          <input id="password_repeat" type="password" class="validate">
-          <label for="password_repeat">Repeat password</label>
+          <input id="cpassword" name="cpassword"  type="password" class="validate">
+          <label for="cpassword">Repeat password</label>
         </div>
       </div>
       <div class="row">
         <div class="input-field col s6">
-          <input id="email" type="email" class="validate">
+          <input id="email"  name="email" type="email" value="{{emails.[0].address}}" class="validate">
           <label for="email">Email</label>
         </div>
       </div>
 <div class="row">
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-<button class="btn waves-effect waves-light" type="submit" name="action">Sauvegarder<i class="material-icons right">send</i></button>
+<button class="btn waves-effect waves-light" type="submit">Sauvegarder<i class="material-icons right">send</i></button>
 </div>
     </form>
   </div>
