--- a/material-iron-router-web/client/stylesheets/style.css
+++ b/material-iron-router-web/client/stylesheets/style.css
@@ -64,3 +64,8 @@ footer {
     width: 98%;
   }
 }
+tfoot input {
+        width: 100%;
+        padding: 3px;
+        box-sizing: border-box;
+    }
