first unitary test + other updates

--- a/material-iron-router-web/client/views/home.html
+++ b/material-iron-router-web/client/views/home.html
@@ -3,8 +3,8 @@
     <div class="text-center">
       <h1>Bonjour!</h1>
       <p>
-       Ce site permet de visualiser la merde concernant ExaBGP
- Voila!!!!!!lol
+       Ce site permet la gestion des routes d'un réseau en prennant en compte la gestion des trous
+          noirs
       </p>
     </div>
   </div>
