--- a/material-iron-router-web/client/views/addRoutes.html
+++ b/material-iron-router-web/client/views/addRoutes.html
@@ -1,50 +1,68 @@
 
 <template name="addRoutes">
-  <h1 class="center">Ajouter les routes</h1>
-<div class="row">
-    <form class="col s12">
+	<div class="modal fade" role="dialog">
+				<div class="modal-header">
+					<button type="button" class="close" data-dismiss="modal">
+						<span aria-hidden="true">&times;</span><span class="sr-only">Close</span>
+					</button>
+				</div>
+
+				<div class="modal-body">
+          <form class="col s12">
+            <div class="row">
+              <div class="input-field col s6">
+                <input id="source" type="text" class="validate">
+                <label for="source">Address</label>
+              </div>
+              </div>
+             <div class="row">
+              <div class="input-field col s6">
+                <input id="dest" type="text" class="validate">
+                <label for="dest">Next hop</label>
+              </div>
+            </div>
+            <div class="row">
+              <div class="input-field col s1">
+                <input id="med" type="number" min=0 class="validate">
+                <label for="med">MED</label>
+              </div>
+              <div class="input-field col s2">
+                <input id="local-pref" type="number" min=0 class="validate">
+                <label for="local-pref">Local Preference</label>
+              </div>
+              <div class="input-field col s1">
+                <input id="origin" type="text" class="validate">
+                <label for="origin">Origin</label>
+              </div>
+            </div>
+            <div class="row">
+             <div class="input-field col s6">
+               <input id="as-path" type="text" class="validate">
+               <label for="as-path">AS Path</label>
+             </div>
+           </div>
+           <div class="row">
+            <div class="input-field col s6">
+              <input id="community" type="text" class="validate">
+              <label for="community">Community</label>
+            </div>
+          </div>
       <div class="row">
-        <div class="input-field col s6">
-          <input id="source" type="text" class="validate">
-          <label for="source">Address</label>
-        </div>
-        </div>
-       <div class="row">
-        <div class="input-field col s6">
-          <input id="dest" type="text" class="validate">
-          <label for="dest">Next hop</label>
-        </div>
+      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+      <button class="btn waves-effect waves-light" type="submit" name="action">Sauvegarder<i class="material-icons right">send</i></button>
       </div>
-      <div class="row">
-        <div class="input-field col s1">
-          <input id="med" type="number" min=0 class="validate">
-          <label for="med">MED</label>
-        </div>
-        <div class="input-field col s2">
-          <input id="local-pref" type="number" min=0 class="validate">
-          <label for="local-pref">Local Preference</label>
-        </div>
-        <div class="input-field col s1">
-          <input id="origin" type="text" class="validate">
-          <label for="origin">Origin</label>
-        </div>
-      </div>
-      <div class="row">
-       <div class="input-field col s6">
-         <input id="as-path" type="text" class="validate">
-         <label for="as-path">AS Path</label>
-       </div>
-     </div>
-     <div class="row">
-      <div class="input-field col s6">
-        <input id="community" type="text" class="validate">
-        <label for="community">Community</label>
-      </div>
-    </div>
-<div class="row">
-<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-<button class="btn waves-effect waves-light" type="submit" name="action">Sauvegarder<i class="material-icons right">send</i></button>
-</div>
-    </form>
-  </div>
+          </form>
+
+				</div>
+
+				<div class="modal-footer">
+					<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+				</div>
+	</div>
+</template>
+
+
+<template name="add_button_routes">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <button class="btn-floating btn-large waves-effect waves-light red" data-modal="signIn"><i class="material-icons">add</i></button>
 </template>
