--- a/material-iron-router-web/client/views/settings.html
+++ b/material-iron-router-web/client/views/settings.html
@@ -20,8 +20,8 @@
       </div>
       <div class="row">
         <div class="input-field col s6">
-          <input id="email"  name="email" type="email" value="{{emails.[0].address}}" class="validate">
-          <label for="email">Email</label>
+          <input  id="email"  name="email" type="email" value={{email.[0].address}} class="validate">
+          <label class="active" for="email">Email</label>
         </div>
       </div>
 <div class="row">
