--- a/material-iron-router-web/client/views/manageUsers.html
+++ b/material-iron-router-web/client/views/manageUsers.html
@@ -1,3 +1,15 @@
 <template name="users">
-  <h1 class="center">Gestion des utilisateurs</h1>
+  <h1 class="center">Inviter un nouveau utilisateur</h1>
+  <div class="row">
+        <div class="row">
+          <div class="input-field col s6">
+            <input  id="email"  name="email" type="email" class="validate">
+            <label class="active" for="email">Email</label>
+          </div>
+        </div>
+  <div class="row">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <button class="btn waves-effect waves-light" type="submit">Envoyer<i class="material-icons right">send</i></button>
+  </div>
+    </div>
 </template>
