--- a/material-iron-router-web/client/views/editRoutes.html
+++ b/material-iron-router-web/client/views/editRoutes.html
@@ -62,5 +62,5 @@
 
 <template name="edit_button_routes">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <button class="btn-floating btn-large waves-effect waves-light red" data-modal="signIn"><i class="material-icons">edit</i></button>
+    <button class="btn-floating btn-large waves-effect waves-light red" id="edit_button_routes" data-modal="signIn"><i class="material-icons">edit</i></button>
 </template>
