--- a/material-iron-router-web/client/views/users.html
+++ b/material-iron-router-web/client/views/users.html
@@ -1,5 +1,6 @@
 <template name="users">
   <h1 class="center">Inviter un nouveau utilisateur</h1>
+  <form id="invite">
   <div class="row">
         <div class="row">
           <div class="input-field col s6">
@@ -12,4 +13,5 @@
   <button class="btn waves-effect waves-light" type="submit">Envoyer<i class="material-icons right">send</i></button>
   </div>
     </div>
+  </form>
 </template>
