--- a/material-iron-router-web/client/views/deleteRoutes.html
+++ b/material-iron-router-web/client/views/deleteRoutes.html
@@ -1,4 +1,4 @@
 <template name="delete_button_routes">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <button class="btn-floating btn-large waves-effect waves-light red" data-modal="signIn"><i class="material-icons">delete</i></button>
+    <button class="btn-floating btn-large waves-effect waves-light red" id="delete_button_routes" data-modal="signIn"><i class="material-icons">delete</i></button>
 </template>
