interface moins degeu!

--- a/material-iron-router-web/client/views/routes.html
+++ b/material-iron-router-web/client/views/routes.html
@@ -3,7 +3,7 @@
  <template name="showRoutes">
   <h1 class="center">Affichage des routes</h1>
 
-  <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.16/css/jquery.dataTables.min.css">
+  <link rel="stylesheet" class = "center" type="text/css" href="https://cdn.datatables.net/1.10.16/css/jquery.dataTables.min.css">
   {{#if isInRole 'admin'}}
 {{> add_button_routes}}
 {{> edit_button_routes}}
