--- a/material-iron-router-web/client/views/users.html
+++ b/material-iron-router-web/client/views/users.html
@@ -1,14 +1,14 @@
 <template name="users">
-  <h1 class="center">Inviter un nouveau utilisateur</h1>
+  <h1 class="center">Ajouter un nouveau utilisateur</h1>
   <form id="invite">
-  <div class="row">
-        <div class="row">
-          <div class="input-field col s6">
+  <div class="center">
+        <div class="center">
+          <div class="input-field col s6" >
             <input  id="email"  name="email" type="email" class="validate">
             <label class="active" for="email">Email</label>
           </div>
         </div>
-  <div class="row">
+  <div class="center">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <button class="btn waves-effect waves-light" type="submit">Envoyer<i class="material-icons right">send</i></button>
   </div>
