--- a/material-iron-router-web/client/stylesheets/style.css
+++ b/material-iron-router-web/client/stylesheets/style.css
@@ -1,6 +1,7 @@
 html {
   position: relative;
   min-height: 100%;
+  min-width: 100%;
 }
 
 
@@ -8,17 +9,14 @@ body {
   font-family: "Open Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif /*rtl:prepend:"Droid Arabic Kufi","Droid Sans", */; 
   font-weight: Bold;
   font-size:small;
-  background: #b7aeae repeat;
+  background: #f7f4f4 repeat;
   margin: 0px;
   /* Margin bottom by footer height */
   margin-bottom: 70px;
 ,  padding: 0px;
+ min-width: 320px;
  
-  min-width: 320px;
-  margin-left: 0px;
-
-
-
+ 
 
 }
 
@@ -34,11 +32,16 @@ footer {
   bottom: 0;
   width: 100%;
   height: 100px;
+
+
 }
 
 
-.page-footer{
-  background-color:#6579a3;
+
+
+body > .content {
+  margin-right: 50px;
+  margin-left: 50px;
 }
 
 
@@ -50,7 +53,8 @@ footer > .content {
 header,
 main,
 footer {
-  padding-left: 100px;
+   margin-right: 0px;
+  
  
 }
 
@@ -69,7 +73,7 @@ footer {
   margin: 0 auto;
   max-width: 1280px;
   width: 100%;
-  background-color:#6579a3;
+
 
 }
 
