--- a/material-iron-router-web/client/views/settings.html
+++ b/material-iron-router-web/client/views/settings.html
@@ -1,24 +1,24 @@
 <template name="settings">
-  <h1 class="center">Parametrages</h1>
-<div class="row">
+  <h1 class="center">Paramètres</h1>
+<div class="center">
     <form id="change_password">
-      <div class="row">
+      <div class="center">
         <div class="input-field col s6">
           <input id="old_password" name="old_password" type="password" class="validate">
-          <label for="old_password">Old password</label>
+          <label for="old_password">votre Ancien mot de passe</label>
         </div>
       </div>
-      <div class="row">
+      <div class="center">
         <div class="input-field col s6">
           <input id="password" name="password" type="password" class="validate">
-          <label for="password">New password</label>
+          <label for="password">votre Nouveau mot de passe</label>
         </div>
 	<div class="input-field col s6">
           <input id="cpassword" name="cpassword"  type="password" class="validate">
-          <label for="cpassword">Repeat password</label>
+          <label for="cpassword"> Confirmer</label>
         </div>
       </div>
-      <div class="row">
+      <div class="center">
       <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
       <button class="btn waves-effect waves-light" id="submit_password" type="submit">Sauvegarder<i class="material-icons right">send</i></button>
       </div>
@@ -27,13 +27,13 @@
       <br>
       <br>
       <form id="change_email">
-      <div class="row">
+      <div class="center">
         <div class="input-field col s6">
           <input  id="email"  name="email" type="email" value={{email.[0].address}} class="validate">
           <label class="active" for="email">Email</label>
         </div>
       </div>
-<div class="row">
+<div class="center">
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <button class="btn waves-effect waves-light" id="submit_email" type="submit">Sauvegarder<i class="material-icons right">send</i></button>
 </div>
