pattern for fields

--- a/material-iron-router-web/client/views/routes.html
+++ b/material-iron-router-web/client/views/routes.html
@@ -10,7 +10,7 @@
 {{> delete_button_routes}}
 {{/if}}
 <p> </p>
-  <tbody>
+  <tbody style="margin-right:100px">
 
     <table id="showRoutes"  class="display" width="150%" cellspacing="0">
       <tr>
