--- a/material-iron-router-web/client/views/addRoutes.html
+++ b/material-iron-router-web/client/views/addRoutes.html
@@ -8,16 +8,16 @@
 				</div>
 
 				<div class="modal-body">
-          <form class="col s12">
+          <form action="#" class="col s12">
             <div class="row">
               <div class="input-field col s6">
-                <input id="address" name="address" type="text" class="validate">
+                <input id="address" name="address" type="text" pattern="([1-9]|[1-9]\d|1\d{2}|2[0-4]\d|25[0-5])(\.(\d|[1-9]\d|1\d{2}|2[0-4]\d|25[0-5])){3}\/\d+" class="validate">
                 <label for="address">Address</label>
               </div>
               </div>
              <div class="row">
               <div class="input-field col s6">
-                <input id="nexthop" name="nexthop" type="text" class="validate">
+                <input id="nexthop" name="nexthop" type="text" pattern="^([0–9]{1,3}.){3}.([0–9]{1,3})$" class="validate">
                 <label for="nexthop">Next hop</label>
               </div>
             </div>
@@ -30,20 +30,30 @@
                 <input id="local_pref" name="local_pref" type="number" min=0 class="validate">
                 <label for="local_pref">Local Preference</label>
               </div>
-              <div class="input-field col s1">
-                <input id="origin" name="origin" type="text" class="validate">
-                <label for="origin">Origin</label>
-              </div>
             </div>
+                <div class="row">
+                <div class="input-field col s2">
+                    <label>Origin</label>
+                </div>
+                <p></p>
+                    <input name="origin" type="radio"  value="igp" id="igp" />
+                    <label for="igp">IGP</label>
+                    <input name="origin" type="radio"  value="egp" id="egp" />
+                    <label for="egp">EGP</label>
+                    <input name="origin" type="radio" value="incomplete" id="incomplete" checked />
+                    <label for="incomplete">Incomplete</label>
+            </div>
+
+
             <div class="row">
              <div class="input-field col s6">
-               <input id="as_path" name="as_path" type="text" class="validate">
+               <input id="as_path" name="as_path" type="text" pattern="^([0-9]{*})+$" class="validate">
                <label for="as_path">AS Path</label>
              </div>
            </div>
            <div class="row">
             <div class="input-field col s6">
-              <input id="community" name="community" type="text" class="validate">
+              <input id="community" name="community"  type="text" pattern="^[\d./:]+$" class="validate">
               <label for="community">Community</label>
             </div>
           </div>
@@ -66,3 +76,8 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <button class="btn-floating btn-large waves-effect waves-light red" data-modal="signIn"><i class="material-icons">add</i></button>
 </template>
+
+
+
+
+
