--- a/material-iron-router-web/client/views/routes.html
+++ b/material-iron-router-web/client/views/routes.html
@@ -22,7 +22,7 @@
                       <th>Community</th>
                       <th>Local Preference</th>
                       <th>Med</th>
-
+                      <th>Creation date</th>
     </tr>
     </table>
 
