--- a/material-iron-router-web/client/views/addRoutes.html
+++ b/material-iron-router-web/client/views/addRoutes.html
@@ -17,7 +17,7 @@
               </div>
              <div class="row">
               <div class="input-field col s6">
-                <input id="nexthop" name="nexthop" type="text" pattern="^([0–9]{1,3}.){3}.([0–9]{1,3})$" class="validate">
+                <input id="nexthop" name="nexthop" type="text" pattern="^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])$" class="validate">
                 <label for="nexthop">Next hop</label>
               </div>
             </div>
